objects/PC_IntegrationSetting__mdt.object
<CustomObject>
    <description>Contains configurations w.r.t all the Third-party integrations associated with CHCLS.</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_IsOverridable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if this setting is allowed to be overridden per engagement program</description>
        <inlineHelpText>Select this checkbox if this setting is allowed to be overridden per engagement program</inlineHelpText>
        <label>Is Overridable Per Eng Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_SettingName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Setting Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_SettingValue__c</fullName>
        <label>Setting Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>